# quark-assistant-singhealth

./: .dockerfile  .gitignore  Dockerfile  README.md  Taskfile.yaml  config.yaml  pyproject.toml
charts/quark-assistant/: Chart.yaml  values.yaml
charts/quark-assistant/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  identity.yaml  service.yaml  serviceaccount.yaml
config/: config.yaml
config/datastores/schema/: indicies.yaml  prompts.yaml
config/quark-assistant/agents/: analysis-summarizer.yaml
config/quark-assistant/prompts/: bcftools-indel-distribution-summarizer.yaml  bcftools-variant-depths-summarizer.yaml  bcftools-variant-quality-summarizer.yaml  bcftools-variant-substitution-types-summarizer.yaml  bismark-alignment-summarizer.yaml  bismark-deduplication-summarizer.yaml  bismark-mbias-summarizer.yaml  bismark-methylation-dp-summarizer.yaml  bismark-strand-alignment-summarizer.yaml  code-gen.yaml  cutadapt-filtered-reads-summarizer.yaml  cutadapt-trimmed-summarizer.yaml  cytoscape-summarizer.yaml  default.yaml  degs-summarizer.yaml  enrichment-summarizer.yaml  entity-validator.yaml  experimental-design-summarizer.yaml  fail-strand-check-table-summarizer.yaml  fastp-filtered-reads-summarizer.yaml  fastp-gc-content-summarizer.yaml  fastp-insert-sizes-summarizer.yaml  fastp-n-content-summarizer.yaml  fastp-sequence-quality-summarizer.yaml  fastqc-raw-adapter-content-summarizer.yaml  fastqc-raw-overrepresented-sequences-by-sample-summarizer.yaml  fastqc-raw-per-base-n-content-summarizer.yaml  fastqc-raw-per-base-sequence-content-summarizer.yaml  fastqc-raw-per-sequence-gc-content-summarizer.yaml  fastqc-raw-per-sequence-quality-scores-summarizer.yaml  fastqc-raw-sequence-counts-summarizer.yaml  fastqc-raw-sequence-duplication-levels-summarizer.yaml  fastqc-raw-sequence-length-distribution-summarizer.yaml  fastqc-raw-sequence-quality-histograms-summarizer.yaml  fastqc-raw-status-checks-summarizer.yaml  fastqc-raw-top-overrepresented-sequences-summarizer.yaml  fastqc-trimmed-adapter-content-summarizer.yaml  fastqc-trimmed-overrepresented-sequences-by-sample-summarizer.yaml  fastqc-trimmed-per-base-n-content-summarizer.yaml  fastqc-trimmed-per-base-sequence-content-summarizer.yaml  (+82 more)
config/quark-assistant/toolsets/: eutils.yaml
datastores/neptune/: schema.yaml
src/: jsunder.py  plant.py  utils.py
src/app/: dependencies.py  main.py
src/app/routers/: knowledge_graph.py  knowledgebases.py  memories.py  prompts.py  simple_chat.py
src/app/types/: __init__.py  chat.py
src/components/adapters/: dict_to_object.py
src/components/agents/: agent.py  helpers.py
src/components/generators/: bedrock_chat_generator.py
src/components/retrievers/: arxiv.py  (+1 more)
src/config/: logging.py  state.py  types.py
src/gtex/: utils.py
src/log_debug/: AnalyzeRequest.py  analyzer.py
src/pipelines/: chat.py  embed.py  enhanced_gtex_chat.py
src/talk2knowledgegraphs/: schemas.py
src/tools/: eutils.py
tmp/: config.yaml
(+40 files in other folders)
